--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -11,11 +11,26 @@
 <html>
 
 <head>
+    <title>@OptionsApplicationConfiguration.Value.NomeSistema - @ViewData["Title"]</title>
 
+    <!-- Meta -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CPN - Jonathan Peris">
+    <meta name="author" content="Jonathan Peris">
 
-    <title>@ViewData["Title"] - @OptionsApplicationConfiguration.Value.NomeSistema</title>
+    <!-- Facebook Meta -->
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="https://dotnet-cpnucleo-pages.azurewebsites.net/">
+    <meta property="og:title" content="CPN - Jonathan Peris">
+    <meta property="og:site_name" content="CPN - Jonathan Peris">
+    <meta property="og:description" content="Sistema de controle de atividades e métricas de lançamento de horas.">
+    <meta property="og:image" content="https://dotnet-cpnucleo-pages.azurewebsites.net/img/profile-image-sharing.jpg">
+    <meta property="og:image:type" content="image/jpg">
+    <meta property="og:image:width" content="460">
+    <meta property="og:image:height" content="722">
+    <meta property="og:type" content="website">
 
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -73,7 +88,7 @@
                     </ul>
                 </div>
             </form>
-            <p class="m-t"> <small><strong>Copyright</strong> &copy; @DateTime.Now.Year @OptionsApplicationConfiguration.Value.Copyright</small> </p>
+            <p class="m-t"> <small><strong>Copyright</strong> &copy; @DateTime.Now.Year <a href="https://peris-studio.azurewebsites.net/" target="_blank">Jonathan Peris</a>, todos os direitos Reservados.</small> </p>
         </div>
     </div>
 
