--- a/Pages/Recurso/Remover.cshtml
+++ b/Pages/Recurso/Remover.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Remoção de Recurso";
 }
 
+@section Styles {
+    <!-- iCheck -->
+    <link href="~/css/plugins/iCheck/custom.css" rel="stylesheet">
+}
+
 <div class="col-lg-12">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
@@ -67,3 +72,16 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <!-- iCheck -->
+    <script src="~/js/plugins/iCheck/icheck.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('.i-checks').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+            });
+        });
+    </script>
+}
