Ajuste na referencia do Datatables na tela de listgem de tarefas

--- a/Pages/Tarefa/Listar.cshtml
+++ b/Pages/Tarefa/Listar.cshtml
@@ -5,8 +5,8 @@
 }
 
 @section Styles {
-    <!-- DatePicker -->
-    <link href="~/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+    <!-- DataTables -->
+    <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet">
 }
 
 <div class="row">
