Migração para versão 2.1 do ASP.NET Core

--- a/Pages/FluxoTrabalho.cshtml
+++ b/Pages/FluxoTrabalho.cshtml
@@ -647,7 +647,7 @@
     <!-- Toastr script -->
     <script src="~/js/plugins/toastr/toastr.min.js"></script>
     <!-- SignalR -->
-    <script src="~/js/signalr-client-1.0.0-alpha2-final.min.js"></script>
+    <script src="~/js/signalr.min.js"></script>
     @if (Model.Lista != null)
     {
         foreach (var workflow in Model.Lista)
