Atualizacao para a versão 2.1 RC do ASP.NET Core

--- a/Pages/NaoEncontrado.cshtml
+++ b/Pages/NaoEncontrado.cshtml
@@ -1,6 +1,6 @@
-﻿@inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
+﻿@page
+@inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
-@page
 @model NaoEncontradoModel
 @{
     Layout = null;
