--- a/Pages/Negado.cshtml
+++ b/Pages/Negado.cshtml
@@ -1,6 +1,6 @@
-﻿@inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
+﻿@page
+@inject IOptions<ApplicationConfigurations> OptionsApplicationConfiguration
 
-@page
 @model NegadoModel
 @{
     Layout = null;
