Alteracao na nomeclatura do botao de Login

--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -77,7 +77,7 @@
                     <input type="password" class="form-control" asp-for="Login.Senha" placeholder="@Html.DisplayNameFor(x => x.Login.Senha)">
                     <span class="help-block m-b-none">@Html.ValidationMessageFor(x => x.Login.Senha)</span>
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
+                <button type="submit" class="btn btn-primary block full-width m-b">Entrar</button>
                 <div class="alert alert-info alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <p style="text-align: left;">Fazendo uma visita? utilize as seguintes credenciais:</p>
