--- a/Pages/Apontamento.cshtml
+++ b/Pages/Apontamento.cshtml
@@ -8,6 +8,8 @@
 @section Styles {
     <!-- TouchSpin -->
     <link href="~/css/plugins/touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet">
+    <!-- DatePicker -->
+    <link href="~/css/plugins/datepicker/datepicker3.css" rel="stylesheet">    
     <!-- DataTables -->
     <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet">
 }
@@ -389,8 +391,8 @@
     <!-- TouchSpin -->
     <script src="~/js/plugins/touchspin/jquery.bootstrap-touchspin.min.js"></script>
     <!-- DatePicker -->
-    <script src="~/js/plugins/datapicker/bootstrap-datepicker.js"></script>
-    <script src="~/js/plugins/datapicker/bootstrap-datepicker.pt-BR.js"></script>
+    <script src="~/js/plugins/datepicker/bootstrap-datepicker.js"></script>
+    <script src="~/js/plugins/datepicker/bootstrap-datepicker.pt-BR.js"></script>
     <!-- DataTables -->
     <script src="~/js/plugins/dataTables/datatables.min.js"></script>
     <script>
