--- a/Pages/ImpedimentoTarefa/Alterar.cshtml
+++ b/Pages/ImpedimentoTarefa/Alterar.cshtml
@@ -84,41 +84,6 @@
 @section Scripts {
     <!-- iCheck -->
     <script src="~/js/plugins/iCheck/icheck.min.js"></script>
-    <!-- Ajax Unobtrusive -->
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.i-checks').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-            });
-        });
-    </script>
-    <script type="text/javascript">
-        (function ($) {
-            var defaultOptions = {
-                validClass: 'has-success',
-                errorClass: 'has-error',
-                highlight: function (element, errorClass, validClass) {
-                    $(element).closest(".form-group")
-                        .removeClass(validClass)
-                        .addClass('has-error');
-                },
-                unhighlight: function (element, errorClass, validClass) {
-                    $(element).closest(".form-group")
-                        .removeClass('has-error')
-                        .addClass(validClass);
-                }
-            };
-
-            $.validator.setDefaults(defaultOptions);
-
-            $.validator.unobtrusive.options = {
-                errorClass: defaultOptions.errorClass,
-                validClass: defaultOptions.validClass,
-            };
-        })(jQuery);
-    </script>
+    
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
