--- a/Pages/Tarefa/Alterar.cshtml
+++ b/Pages/Tarefa/Alterar.cshtml
@@ -6,8 +6,8 @@
 }
 
 @section Styles {
-    <!-- DataTables -->
-    <link href="~/css/plugins/dataTables/datatables.min.css" rel="stylesheet">
+    <!-- DatePicker -->
+    <link href="~/css/plugins/datepicker/datepicker3.css" rel="stylesheet">
 }
 
 <div class="col-lg-12">
@@ -127,12 +127,8 @@
 
 @section Scripts {
     <!-- DatePicker -->
-    <script src="~/js/plugins/datapicker/bootstrap-datepicker.js"></script>
-    <script src="~/js/plugins/datapicker/bootstrap-datepicker.pt-BR.js"></script>
-    <!-- Ajax Unobtrusive -->
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
-    <script src="~/lib/jquery-ajax-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/js/plugins/datepicker/bootstrap-datepicker.js"></script>
+    <script src="~/js/plugins/datepicker/bootstrap-datepicker.pt-BR.js"></script>
     <script>
         $(document).ready(function () {
 
@@ -157,29 +153,6 @@
             });
         });
     </script>
-    <script type="text/javascript">
-        (function ($) {
-            var defaultOptions = {
-                validClass: 'has-success',
-                errorClass: 'has-error',
-                highlight: function (element, errorClass, validClass) {
-                    $(element).closest(".form-group")
-                        .removeClass(validClass)
-                        .addClass('has-error');
-                },
-                unhighlight: function (element, errorClass, validClass) {
-                    $(element).closest(".form-group")
-                        .removeClass('has-error')
-                        .addClass(validClass);
-                }
-            };
-
-            $.validator.setDefaults(defaultOptions);
-
-            $.validator.unobtrusive.options = {
-                errorClass: defaultOptions.errorClass,
-                validClass: defaultOptions.validClass,
-            };
-        })(jQuery);
-    </script>
+    
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
