Ajuste na tag form para remoção de itens desnecessários para o Razor Pages

--- a/Pages/Recurso/Remover.cshtml
+++ b/Pages/Recurso/Remover.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="ibox-content">
-            <form asp-controller="Recurso" asp-action="Remover" method="post" class="form-horizontal">
+            <form method="post" class="form-horizontal">
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Recurso.IdRecurso"></label>
                     <div class="col-sm-10">
