--- a/src/Cpnucleo.Pages/Pages/Apontamento/Remover.cshtml
+++ b/src/Cpnucleo.Pages/Pages/Apontamento/Remover.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label" asp-for="Apontamento.Tarefa"></label>
+                    <label class="col-sm-2 control-label" asp-for="Apontamento.IdTarefa"></label>
                     <div class="col-sm-10">
                         <input type="hidden" asp-for="Apontamento.IdTarefa">
                         <p class="form-control-static">@Html.DisplayFor(x => x.Apontamento.Tarefa.Nome)</p>
