--- a/src/Cpnucleo.Pages/Pages/RecursoProjeto/Incluir.cshtml
+++ b/src/Cpnucleo.Pages/Pages/RecursoProjeto/Incluir.cshtml
@@ -20,8 +20,8 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="RecursoProjeto.IdProjeto"></label>
                     <div class="col-sm-10">
-                        <input type="hidden" asp-for="RecursoProjeto.IdProjeto" value="@Model.Projeto.IdProjeto">
-                        <p class="form-control-static">@Html.DisplayFor(x => x.Projeto.Nome)</p>
+                        <input type="hidden" asp-for="RecursoProjeto.IdProjeto" value="@Model.RecursoProjeto.Projeto.IdProjeto">
+                        <p class="form-control-static">@Html.DisplayFor(x => x.RecursoProjeto.Projeto.Nome)</p>
                     </div>
                 </div>
                 <div class="hr-line-dashed"></div>
@@ -34,7 +34,7 @@
                 <div class="hr-line-dashed"></div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-2">
-                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="@Model.Projeto.IdProjeto">Voltar</a>
+                        <a class="btn btn-white" role="button" asp-page="Listar" asp-route-idProjeto="@Model.RecursoProjeto.Projeto.IdProjeto">Voltar</a>
                         <button class="btn btn-primary" type="submit">Incluir</button>
                     </div>
                 </div>
