--- a/src/Cpnucleo.Pages/Pages/Login.cshtml
+++ b/src/Cpnucleo.Pages/Pages/Login.cshtml
@@ -11,6 +11,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144007742-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-144007742-2');
+    </script>
+
     <title>@OptionsApplicationConfiguration.Value.NomeSistema - @ViewData["Title"]</title>
 
     <!-- Meta -->
