[CHORE] Project rename

--- a/src/Cpnucleo.Pages/Pages/Login.cshtml
+++ b/src/Cpnucleo.Pages/Pages/Login.cshtml
@@ -32,11 +32,11 @@
 
     <!-- Facebook Meta -->
     <meta property="og:locale" content="pt_BR">
-    <meta property="og:url" content="https://dotnet-cpnucleo-pages.azurewebsites.net/">
+    <meta property="og:url" content="https://cpnucleo-pages.azurewebsites.net/">
     <meta property="og:title" content="CPN - Jonathan Peris">
     <meta property="og:site_name" content="CPN - Jonathan Peris">
     <meta property="og:description" content="Sistema de controle de atividades e métricas de lançamento de horas.">
-    <meta property="og:image" content="https://dotnet-cpnucleo-pages.azurewebsites.net/img/profile-image-sharing.jpg">
+    <meta property="og:image" content="https://cpnucleo-pages.azurewebsites.net/img/profile-image-sharing.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="460">
     <meta property="og:image:height" content="722">
