--- a/src/Cpnucleo.Pages/Pages/Tarefa/Incluir.cshtml
+++ b/src/Cpnucleo.Pages/Pages/Tarefa/Incluir.cshtml
@@ -1,5 +1,10 @@
 ﻿@page
 
+@using Cpnucleo.Pages.Authentication
+@using System.Security.Claims
+
+@inject IClaimsManager _claimsManager
+
 @model Tarefa.IncluirModel
 @{
     ViewData["Title"] = "Inclusão de Tarefa";
@@ -22,6 +27,14 @@
         </div>
         <div class="ibox-content">
             <form method="post" class="form-horizontal">
+
+                @{
+                    string retorno = _claimsManager.ReadClaimsPrincipal(HttpContext.User, ClaimTypes.PrimarySid);
+                    int idRecurso = int.Parse(retorno);
+                }
+
+                <input type="hidden" asp-for="Tarefa.IdRecurso" value="@idRecurso" />
+
                 <div class="form-group">
                     <label class="col-sm-2 control-label" asp-for="Tarefa.Nome"></label>
                     <div class="col-sm-10">
@@ -129,6 +142,6 @@
             });
         });
     </script>
-    
+
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
